tipos de projetos

--- a/src/index.html
+++ b/src/index.html
@@ -65,14 +65,18 @@
   <section class="caixa">
     <div class="container">
       <h2>Projetos</h2>
+
+      <!-- ----------Comerciais para varejo-------- -->
       <div class="container mt-5">
+        <h2 class="tipeCard">Comerciais para varejo</h2>
         <section class="card-section row">
 
           <!-- Card 1 -->
           <div class="col-md-4 mb-4">
             <div class="card">
               <div class="embed-responsive embed-responsive-16by9">
-                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/2zB3oxpL8JM?si=SN6lZc59JtyazY_F"allowfullscreen></iframe>
+                <iframe class="embed-responsive-item"
+                  src="https://www.youtube.com/embed/2zB3oxpL8JM?si=SN6lZc59JtyazY_F" allowfullscreen></iframe>
               </div>
               <div class="card-body">
                 <h3 class="card-title">Título 1</h3>
@@ -118,40 +122,63 @@
             </div>
           </div>
 
-          <!-- Card 4 -->
+        </section>
+      </div>
+
+      <!-- ----------Comerciais para varejo-------- -->
+      <div class="container mt-5">
+        <h2 class="tipeCard">Campanhas publicitarias</h2>
+        <section class="card-section row">
+
+          <!-- Card 1 -->
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item"
+                  src="https://www.youtube.com/embed/2zB3oxpL8JM?si=SN6lZc59JtyazY_F" allowfullscreen></iframe>
+              </div>
               <div class="card-body">
-                <h3 class="card-title">Título 4</h3>
+                <h3 class="card-title">Título 1</h3>
                 <button class="btn btn-primary" onclick="showDetails('details4')">Mais Informações</button>
                 <div class="details" id="details4">
-                  <p>conteúdo que quiser aqui.</p>
+                  <p>Esses são mais detalhes sobre o card. Você pode adicionar o conteúdo que quiser aqui.Esses são
+                    mais
+                    detalhes sobre o card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre
+                    o
+                    card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre o card. Você
+                    pode
+                    adicionar o conteúdo que quiser aqui</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Card 5 -->
+          <!-- Card 2 -->
           <div class="col-md-4 mb-4">
             <div class="card">
               <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
               <div class="card-body">
-                <h3 class="card-title">Título 5</h3>
+                <h3 class="card-title">Título 2</h3>
                 <button class="btn btn-primary" onclick="showDetails('details5')">Mais Informações</button>
                 <div class="details" id="details5">
-                  <p>conteúdo que quiser aqui.</p>
+                  <p>Esses são mais detalhes sobre o card. Você pode adicionar o conteúdo que quiser aqui.Esses são
+                    mais
+                    detalhes sobre o card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre
+                    o
+                    card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre o card. Você
+                    pode
+                    adicionar o conteúdo que quiser aqui</p>
                 </div>
               </div>
             </div>
           </div>
 
-          <!-- Card 6 -->
+          <!-- Card 3 -->
           <div class="col-md-4 mb-4">
             <div class="card">
               <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
               <div class="card-body">
-                <h3 class="card-title">Título 6</h3>
+                <h3 class="card-title">Título 3</h3>
                 <button class="btn btn-primary" onclick="showDetails('details6')">Mais Informações</button>
                 <div class="details" id="details6">
                   <p>conteúdo que quiser aqui.</p>
@@ -159,25 +186,73 @@
               </div>
             </div>
           </div>
+        </section>
+      </div>
 
-          
-          <!-- Card 7 -->
+      <!-- ----------Campanha de aniversário-------- -->
+      <div class="container mt-5">
+        <h2 class="tipeCard">Campanha de aniversário</h2>
+        <section class="card-section row">
+
+          <!-- Card 1 -->
           <div class="col-md-4 mb-4">
             <div class="card">
-              <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+              <div class="embed-responsive embed-responsive-16by9">
+                <iframe class="embed-responsive-item"
+                  src="https://www.youtube.com/embed/2zB3oxpL8JM?si=SN6lZc59JtyazY_F" allowfullscreen></iframe>
+              </div>
               <div class="card-body">
-                <h3 class="card-title">Título 7</h3>
+                <h3 class="card-title">Título 1</h3>
                 <button class="btn btn-primary" onclick="showDetails('details7')">Mais Informações</button>
                 <div class="details" id="details7">
-                  <p>conteúdo dsffdsfdsfdsfdsfdsfsdfsdfsdsfdfdssfdsdfsfddsfsfdfdssdf.</p>
+                  <p>Esses são mais detalhes sobre o card. Você pode adicionar o conteúdo que quiser aqui.Esses são
+                    mais
+                    detalhes sobre o card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre
+                    o
+                    card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre o card. Você
+                    pode
+                    adicionar o conteúdo que quiser aqui</p>
                 </div>
               </div>
             </div>
           </div>
 
+          <!-- Card 2 -->
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+              <div class="card-body">
+                <h3 class="card-title">Título 2</h3>
+                <button class="btn btn-primary" onclick="showDetails('details8')">Mais Informações</button>
+                <div class="details" id="details8">
+                  <p>Esses são mais detalhes sobre o card. Você pode adicionar o conteúdo que quiser aqui.Esses são
+                    mais
+                    detalhes sobre o card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre
+                    o
+                    card. Você pode adicionar o conteúdo que quiser aquiEsses são mais detalhes sobre o card. Você
+                    pode
+                    adicionar o conteúdo que quiser aqui</p>
+                </div>
+              </div>
+            </div>
+          </div>
 
+          <!-- Card 3 -->
+          <div class="col-md-4 mb-4">
+            <div class="card">
+              <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+              <div class="card-body">
+                <h3 class="card-title">Título 3</h3>
+                <button class="btn btn-primary" onclick="showDetails('details9')">Mais Informações</button>
+                <div class="details" id="details9">
+                  <p>Conteúdo que quiser aqui.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
       </div>
+
   </section>
 
   <footer class="mt-4 mb-4">
