--- a/index.html
+++ b/index.html
@@ -255,6 +255,31 @@
 
   </section>
 
+  <h1 class="timeline-title">UL timeline cards</h1>
+  <ul class="timeline-list">
+      <li style="--accent-color:#41516C">
+          <div class="date">2002</div>
+          <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+      </li>
+      <li style="--accent-color:#FBCA3E">
+          <div class="date">2007</div>
+          <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+      </li>
+      <li style="--accent-color:#E24A68">
+          <div class="date">2012</div>
+          <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+      </li>
+      <li style="--accent-color:#1B5F8C">
+          <div class="date">2017</div>
+          <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+      </li>
+      <li style="--accent-color:#4CADAD">
+          <div class="date">2022</div>
+          <img src="img/motion.jpeg" alt="Imagem Demonstrativa" class="card-img-top">
+      </li>
+  </ul>
+  <div class="credits"><a target="_blank" href="https://www.freepik.com/free-vector/infographic-template-with-yearly-info_1252895.htm">inspired by</a></div>
+
   <footer class="mt-4 mb-4">
     <div class="container">
       <div class="row">
@@ -264,10 +289,10 @@
           </p>
         </div>
         <div class="col-md-4 d-flex justify-content-end">
-          <a href="" class="btn iconRede ml-2">
+          <a href="" target="_blank" class="btn iconRede ml-2">
             <i class="fab fa-facebook"></i>
           </a>
-          <a href="" class="btn iconRede ml-2">
+          <a href="" target="_blank" class="btn iconRede ml-2">
             <i class="fab fa-instagram"></i>
           </a>
           <a href="https://www.youtube.com/@GLIMAGG" target="_blank" class="btn iconRede ml-2">
